Updated backend API URLs

--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
         let roomStatus = {};
         let labStatus = {};
         let currentUserType = null;
-        const apiBaseUrl = 'http://localhost:3001/api';
+        const apiBaseUrl = 'https://backend-repo-1-ptd7.onrender.com';
 
         // Initialize all rooms as available
         Object.values(floors).forEach(floorRooms => {
